# python-fragments

./: .gitignore  404.html  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  extras.css  index.html  lsp.py  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/workflows/: release.yml  test.yml
benchmarks/: index.html
benchmarks/calls/: benchmark.py  sample.py
benchmarks/transpilation/: benchmark.py  sample.py
docs/: CNAME  extras.css  ide-tooling.md  index.md  installation.md  roadmap.md  transpiler.md
docs/benchmarks/: index.md
docs/examples/: fastapi.md
docs/features/: classes-attribute.md  for-loop.md  if-statement.md  style-attribute.md
docs/getting-started/: checklist.md  installation.md  lsp.md  vs-code.md
docs/ide-tooling/: lsp.md  vs-code.md
docs/overrides/: main.html
docs/syntax/: attributes.md  components.md  control-flow.md  fragments.md
docs/syntax-and-usage/: attributes.md  comments.md  components.md  fragments.md  interpolation.md
docs/transpiler/: html-library.md  import-hook.md  transpilation.md
examples/: app.py  example.py  exercise.py  exercise_list.pyf  fastapi.py  fastapi.pyf  fastapi2.py  fastapi_2.pyf  fastapi_libonly.py  layouts.py  routes.py  uvicorn.py
examples/fastapi/: index.html
fragments/: __init__.py  ast_nodes.py  cli.py  frag_loader.py  grammar.py  loader.py  nodes.py  source.py  template.py  transpiler.py  types.py
fragments/html/: elements.py
fragments/lsp/: CLAUDE.md  based_proxy.py  completion.py  definition.py  file_state.py  hover.py  intercept.py  language_server.py  lifecycle.py  message_queue.py  proxy.py  pyright.py  rename.py  semantic_tokens.py  server.py  source_map.py  types.py
getting-started/checklist/: index.html
getting-started/installation/: index.html
getting-started/lsp/: index.html
getting-started/vs-code/: index.html
python-fragments/: language-configuration.json  package-lock.json  package.json  tsconfig.json
python-fragments/snippets/: python-fragments.json
python-fragments/src/: extension.ts
python-fragments/syntaxes/: python.tmLanguage.json
roadmap/: index.html
search/: search_index.json
syntax-and-usage/attributes/: index.html
syntax-and-usage/comments/: index.html
syntax-and-usage/components/: index.html
syntax-and-usage/control-flow/: index.html
syntax-and-usage/fragments/: index.html
syntax-and-usage/interpolation/: index.html
tests/: test_end_to_end.py  test_grammar.py  test_html_elements.py  test_intercept.py  test_proxy.py  test_pyright.py  test_source_map.py
tests/data/: attribute-interpolation.pyf  body.pyf  element-attributes.pyf  element-children.pyf  element-only.pyf  element-text.pyf  empty.pyf  exercise-list.pyf  for-block.pyf  full.py  full.pyf  if-block.pyf  interpolation.pyf  parameters.pyf  while-block.pyf  whitespace.pyf
transpiler/html-library/: index.html
transpiler/import-hook/: index.html
transpiler/transpilation/: index.html
vscode-extension/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
(+20 files in other folders)
