[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "python-fragments"
version = "0.23"
description = "Modern HTML template rendering in Python"
authors = [{ name = "The Running Algorithm", email = "services@therunningalgorithm.info" }]
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
lsp = [
    "basedpyright>=1.39.0",
    "lsprotocol>=2025.0.0",
]
dev = [
    "pytest>=8.4.1",
]

[project.scripts]
fragments = "fragments.cli:main"
fragments-lsp = "fragments.lsp.based_proxy:main"

[tool.setuptools.packages.find]
include = ["fragments*"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
