[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "python-fragments"
version = "0.35"
description = "Modern HTML template rendering in Python"
authors = [{ name = "The Running Algorithm", email = "services@therunningalgorithm.info" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
]

[project.urls]
Homepage = "https://python-fragments.io"
Documentation = "https://python-fragments.io"
Source = "https://github.com/TheRunningAlgorithm2/python-fragments"
Issues = "https://github.com/TheRunningAlgorithm2/python-fragments/issues"

[project.optional-dependencies]
lsp = [
    "basedpyright>=1.39.0",
    "lsprotocol>=2025.0.0",
]
dev = [
    "pytest>=8.4.1",
]

[project.scripts]
fragments = "fragments.cli:main"
fragments-lsp = "fragments.lsp.based_proxy:main"

[tool.setuptools.packages.find]
include = ["fragments*"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
